# NielsenIQ_MLOps

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample.env  setup.sh
counter/: config.py  constants.py
counter/adapters/: count_repo.py  helpers.py  models.py  object_detector.py
counter/domain/: actions.py  models.py  ports.py
counter/entrypoints/: main.py  webapp.py
migrations/: env.py
migrations/versions/: ae2870447b2b_initial_schema.py
resources/: swagger.json
tests/: conftest.py
tests/adapters/: test_count_repo.py
tests/entrypoints/: test_webapp.py
